--- a/app/src/main/res/layout/fragment_equipos.xml
+++ b/app/src/main/res/layout/fragment_equipos.xml
@@ -7,9 +7,26 @@
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
-        android:id="@+id/textViewTeams"
+        android:id="@+id/textViewEquipos"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:text="@string/hello_blank_fragment"
+        android:layout_marginTop="130dp"/>
+
+    <EditText
+        android:id="@+id/editTextBuscarEquipo"
+        android:layout_width="379dp"
+        android:layout_height="44dp"
+        android:layout_marginTop="20dp"
+        android:hint="Usuario"
+        />
+
+    <Button
+        android:id="@+id/btnBuscarEquipo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="70dp"
+        android:text="Button"
+        />
 
 </FrameLayout>
