--- a/app/src/main/res/layout/fragment_jugadores.xml
+++ b/app/src/main/res/layout/fragment_jugadores.xml
@@ -10,6 +10,24 @@
         android:id="@+id/textViewJugadores"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:text="@string/hello_blank_fragment"
+        android:layout_marginTop="130dp"/>
+
+    <EditText
+        android:id="@+id/editTextBuscarJugador"
+        android:layout_width="379dp"
+        android:layout_height="44dp"
+        android:layout_marginTop="20dp"
+        android:hint="Usuario"
+        />
+
+    <Button
+        android:id="@+id/btnBuscarJugador"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="70dp"
+        android:text="Button"
+        />
+
 
 </FrameLayout>
