--- a/app/src/main/res/layout/fragment_jugadores.xml
+++ b/app/src/main/res/layout/fragment_jugadores.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -11,23 +12,37 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="@string/hello_blank_fragment"
-        android:layout_marginTop="130dp"/>
+        android:layout_marginTop="90dp"
+        android:layout_marginLeft="140dp"/>
 
     <EditText
         android:id="@+id/editTextBuscarJugador"
-        android:layout_width="379dp"
+        android:layout_width="340dp"
         android:layout_height="44dp"
         android:layout_marginTop="20dp"
-        android:hint="Usuario"
-        />
+        android:hint="Nombre del Jugador" />
 
     <Button
         android:id="@+id/btnBuscarJugador"
+        android:layout_width="60dp"
+        android:layout_height="55dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="345dp"
+        android:text="Button" />
+
+    <ImageView
+        android:id="@+id/imageViewJugadorBuscado"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="70dp"
-        android:text="Button"
-        />
+        tools:src="@tools:sample/avatars"
+        android:layout_marginTop="90dp"/>
+
+    <TextView
+        android:id="@+id/textViewStatsJugadorBuscado"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TextView"
+        android:layout_marginTop="400dp"/>
 
 
 </FrameLayout>
