--- a/app/src/main/res/layout/fragment_cambiar_datos.xml
+++ b/app/src/main/res/layout/fragment_cambiar_datos.xml
@@ -26,8 +26,7 @@
         android:layout_width="340dp"
         android:layout_height="44dp"
         android:layout_marginTop="300dp"
-        android:hint="Nombre del equipo"
-        />
+        android:hint="Nombre del Jugador" />
 
 
     <EditText
@@ -39,7 +38,7 @@
         />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/btnCambiarDatos"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="500dp"
