--- a/app/src/main/res/layout/fragment_jugadores.xml
+++ b/app/src/main/res/layout/fragment_jugadores.xml
@@ -44,5 +44,12 @@
         android:text="TextView"
         android:layout_marginTop="400dp"/>
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerViewStatsJugadorBuscado"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="400dp"
+        />
+
 
 </FrameLayout>
