--- a/app/src/main/res/layout/stats_list.xml
+++ b/app/src/main/res/layout/stats_list.xml
@@ -24,6 +24,12 @@
                 android:orientation="vertical">
 
                 <TextView
+                    android:id="@+id/textViewStatsSeasonYear"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:text="Season Year"/>
+
+                <TextView
                     android:id="@+id/textViewStatsGamesPlayed"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
