--- a/app/src/main/res/layout/fragment_jugadores.xml
+++ b/app/src/main/res/layout/fragment_jugadores.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,51 +7,233 @@
     tools:context=".JugadoresFragment">
 
     <!-- TODO: Update blank fragment layout -->
+
     <TextView
         android:id="@+id/textViewJugadores"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="186dp"
+        android:layout_height="304dp"
+        android:layout_marginStart="220dp"
+        android:layout_marginTop="60dp"
         android:text="@string/hello_blank_fragment"
-        android:layout_marginTop="90dp"
-        android:layout_marginLeft="140dp"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/editTextBuscarJugador"
         android:layout_width="340dp"
         android:layout_height="44dp"
-        android:layout_marginTop="20dp"
-        android:hint="Nombre del Jugador" />
+        android:layout_marginTop="5dp"
+        android:hint="Nombre del Jugador"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/btnBuscarJugador"
         android:layout_width="60dp"
         android:layout_height="55dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="345dp"
-        android:text="Button" />
+        android:layout_marginStart="348dp"
+        android:layout_marginBottom="666dp"
+        android:text="Button"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
+        />
 
     <ImageView
         android:id="@+id/imageViewJugadorBuscado"
         android:layout_width="220dp"
         android:layout_height="160dp"
-        tools:src="@tools:sample/avatars"
-        android:layout_marginTop="90dp"
-        android:scaleType="fitXY"/>
+        android:layout_marginTop="60dp"
+        android:scaleType="fitXY"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:src="@tools:sample/avatars" />
 
     <TextView
         android:id="@+id/textViewStatsJugadorBuscado"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
-        android:layout_marginTop="400dp"/>
+        android:layout_marginTop="400dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+
+    <TextView
+        android:id="@+id/labelStatsSeasonYear"
+        android:layout_width="43dp"
+        android:layout_height="30dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="400dp"
+        android:background="@drawable/back_label"
+        android:gravity="center"
+        android:textColor="@color/white"
+        android:text="Año"
+        android:textSize="12sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/labelStatsGamesPlayed"
+        android:layout_width="31dp"
+        android:layout_height="30dp"
+        android:layout_marginStart="2dp"
+        android:layout_marginTop="400dp"
+        android:background="@drawable/back_label"
+        android:gravity="center"
+        android:text="PJ"
+        android:textColor="@color/white"
+        android:textSize="12sp"
+        app:layout_constraintStart_toEndOf="@+id/labelStatsSeasonYear"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/labelStatsMPG"
+        android:layout_width="31dp"
+        android:layout_height="30dp"
+        android:layout_marginStart="2dp"
+        android:layout_marginTop="400dp"
+        android:background="@drawable/back_label"
+        android:gravity="center"
+        android:text="MPP"
+        android:textColor="@color/white"
+        android:textSize="12sp"
+        app:layout_constraintStart_toEndOf="@+id/labelStatsGamesPlayed"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/labelStatsPPG"
+        android:layout_width="31dp"
+        android:layout_height="30dp"
+        android:layout_marginStart="2dp"
+        android:layout_marginTop="400dp"
+        android:background="@drawable/back_label"
+        android:gravity="center"
+        android:text="PPG"
+        android:textSize="12sp"
+        android:textColor="@color/white"
+        app:layout_constraintStart_toEndOf="@+id/labelStatsMPG"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/labelStatsRPG"
+        android:layout_width="31dp"
+        android:layout_height="30dp"
+        android:layout_marginStart="2dp"
+        android:layout_marginTop="400dp"
+        android:background="@drawable/back_label"
+        android:gravity="center"
+        android:text="RPP"
+        android:textSize="12sp"
+        android:textColor="@color/white"
+        app:layout_constraintStart_toEndOf="@+id/labelStatsPPG"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/labelStatsAPG"
+        android:layout_width="31dp"
+        android:layout_height="30dp"
+        android:layout_marginStart="2dp"
+        android:layout_marginTop="400dp"
+        android:background="@drawable/back_label"
+        android:gravity="center"
+        android:text="APP"
+        android:textColor="@color/white"
+        app:layout_constraintStart_toEndOf="@+id/labelStatsRPG"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/labelStatsSPG"
+        android:layout_width="31dp"
+        android:layout_height="30dp"
+        android:layout_marginStart="2dp"
+        android:layout_marginTop="400dp"
+        android:background="@drawable/back_label"
+        android:gravity="center"
+        android:text="SPP"
+        android:textColor="@color/white"
+        android:textSize="12sp"
+
+        app:layout_constraintStart_toEndOf="@+id/labelStatsAPG"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/labelStatsBPG"
+        android:layout_width="31dp"
+        android:layout_height="30dp"
+        android:layout_marginStart="2dp"
+        android:layout_marginTop="400dp"
+        android:background="@drawable/back_label"
+        android:gravity="center"
+        android:text="TPP"
+        android:textColor="@color/white"
+        android:textSize="12sp"
+        app:layout_constraintStart_toEndOf="@+id/labelStatsSPG"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/labelStatsTOPG"
+        android:layout_width="31dp"
+        android:layout_height="30dp"
+        android:layout_marginStart="2dp"
+        android:layout_marginTop="400dp"
+        android:background="@drawable/back_label"
+        android:gravity="center"
+        android:text="PÉR"
+        android:textSize="12sp"
+        android:textColor="@color/white"
+        app:layout_constraintStart_toEndOf="@+id/labelStatsBPG"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/labelStatsFGP"
+        android:layout_width="31dp"
+        android:layout_height="30dp"
+        android:layout_marginStart="2dp"
+        android:layout_marginTop="400dp"
+        android:background="@drawable/back_label"
+        android:gravity="center"
+        android:text="%TC"
+        android:textSize="12sp"
+        android:textColor="@color/white"
+        app:layout_constraintStart_toEndOf="@+id/labelStatsTOPG"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/labelStatsTPP"
+        android:layout_width="31dp"
+        android:layout_height="30dp"
+        android:layout_marginStart="2dp"
+        android:layout_marginTop="400dp"
+        android:background="@drawable/back_label"
+        android:gravity="center"
+        android:text="%3P"
+        android:textSize="12sp"
+        android:textColor="@color/white"
+        app:layout_constraintStart_toEndOf="@+id/labelStatsFGP"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/labelStatsFTP"
+        android:layout_width="31dp"
+        android:layout_height="30dp"
+        android:layout_marginStart="2dp"
+        android:layout_marginTop="400dp"
+        android:background="@drawable/back_label"
+        android:gravity="center"
+        android:text="%TL"
+        android:textSize="12sp"
+        android:textColor="@color/white"
+        app:layout_constraintStart_toEndOf="@+id/labelStatsTPP"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewStatsJugadorBuscado"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="400dp"
-        />
+        android:layout_marginTop="435dp"
+        android:layout_marginBottom="20dp"
+        android:background="@drawable/back_label"/>
 
 
-
-</FrameLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
