--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -12,6 +12,7 @@
         android:layout_height="44dp"
         android:layout_marginTop="96dp"
         android:hint="Usuario"
+        android:inputType="textEmailAddress"
         app:layout_constraintBottom_toTopOf="@+id/iniciarApp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -24,6 +25,7 @@
         android:layout_height="44dp"
         android:layout_marginTop="164dp"
         android:hint="Contraseña"
+        android:inputType="textPassword"
         app:layout_constraintBottom_toTopOf="@+id/iniciarApp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
