--- a/app/src/main/res/layout/jugadores_list.xml
+++ b/app/src/main/res/layout/jugadores_list.xml
@@ -2,57 +2,85 @@
 <androidx.cardview.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:padding="6dp">
-
-            <LinearLayout
-                android:id="@+id/linearLayout"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
-                android:layout_marginStart="4dp"
-                android:paddingLeft="150dp"
-                android:orientation="vertical">
-
-                <TextView
-                    android:id="@+id/textViewRosterName"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:text="Name"/>
-                <TextView
-                    android:id="@+id/textViewRosterJersey"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:text="Name"/>
-                <TextView
-                    android:id="@+id/textViewRosterPos"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:text="Name"/>
-                <TextView
-                    android:id="@+id/textViewRosterNbaDebutYear"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:text="Name"/>
-                <TextView
-                    android:id="@+id/textViewRosterCountry"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:text="Name"/>
+        android:layout_height="wrap_content">
 
 
+        <TextView
+            android:id="@+id/textViewRosterName"
+            android:layout_width="146dp"
+            android:layout_height="20dp"
+            android:layout_marginStart="2dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="2dp"
+            android:background="@drawable/back"
+            android:text="Name"
+            app:layout_constraintEnd_toStartOf="@+id/textViewRosterPos"
+            app:layout_constraintStart_toEndOf="@+id/textViewRosterJersey"
+            app:layout_constraintTop_toTopOf="parent" />
 
-            </LinearLayout>
-        </RelativeLayout>
-    </LinearLayout>
+        <TextView
+            android:id="@+id/textViewRosterJersey"
+            android:layout_width="46dp"
+            android:layout_height="20dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="2dp"
+            android:background="@drawable/back"
+            android:gravity="center"
+            android:text="Jersey"
+            app:layout_constraintEnd_toStartOf="@+id/textViewRosterName"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/textViewRosterPos"
+            android:layout_width="31dp"
+            android:layout_height="20dp"
+            android:layout_marginStart="2dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="2dp"
+            android:background="@drawable/back"
+            android:gravity="center"
+            android:text="PF"
+            app:layout_constraintEnd_toStartOf="@+id/textViewRosterNbaDebutYear"
+            app:layout_constraintStart_toEndOf="@+id/textViewRosterName"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/textViewRosterNbaDebutYear"
+            android:layout_width="41dp"
+            android:layout_height="20dp"
+            android:layout_marginStart="2dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="2dp"
+            android:background="@drawable/back"
+            android:gravity="center"
+            android:text="2000"
+            app:layout_constraintEnd_toStartOf="@+id/textViewRosterCountry"
+            app:layout_constraintStart_toEndOf="@+id/textViewRosterPos"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/textViewRosterCountry"
+            android:layout_width="107dp"
+            android:layout_height="20dp"
+            android:layout_marginStart="2dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="16dp"
+            android:background="@drawable/back"
+            android:text="País"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/textViewRosterNbaDebutYear"
+            app:layout_constraintTop_toTopOf="parent" />
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
 
 </androidx.cardview.widget.CardView>
